--- a/style.css
+++ b/style.css
@@ -51,18 +51,33 @@ button{
   overflow: hidden;
   animation: showBunner 3s ease;
 }
-.popup__open{
+.popup__open-wrapp{
     position: absolute;
+    top: 50%;
+    right: 100px;
+    width: 30px;
+    height: 30px;
+    display: none;
+}
+.popup__open{ 
     background: #00b1f2;
     border-radius: 50%;
     padding: 5px;
-    display: none;
-    top: 50%;
-    right: 100px;
+    width: 22px;
+    height: 22px;
+    animation: showOpenPopup 1.2s ease;
 }
 .open__media{
     width: 12px;
     height: 12px;
+}
+@keyframes showOpenPopup{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
 }
 .banner__popup{
     position: absolute;
@@ -98,6 +113,19 @@ button{
     width: 275px;
     height: 345px;
     margin-bottom: 10px;
+    position: relative;
+}
+.video__btn{
+    position: absolute;
+    background: 0;
+    width: 30px;
+    height: 30px;
+    right: 7%;
+    bottom: 22%;
+}
+.video__img{
+    width: 30px;
+    height: 30px;
 }
 .popup__button{
     width: 130px;
