--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+@font-face {
+  font-family: VWText; 
+  src: url(./assets/fonts/VWText-Regular.otf); 
+}
+@font-face {
+  font-family: VWHead; 
+  src: url(./assets/fonts/VWHead-Bold.otf);
+}
+@font-face {
+  font-family: VWHead; 
+  src: url(./assets/fonts/VWHead-Regular.otf); 
+}
+
 /* Page */
 *,
 *::before,
@@ -8,24 +21,23 @@
   box-sizing: border-box;
   font-family: inherit;
 }
-button{
-    outline: none;
-    
+button {
+  outline: none;
 }
 .body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "VWHead";
   font-style: 11px;
   color: #ffffff;
   position: relative;
 }
 .banner__wrapper {
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.301);
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.301);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 /* @keyframes showBunner{
     0%{
@@ -38,7 +50,7 @@ button{
     }
 } */
 .banner {
-    position: relative;
+  position: relative;
   width: 320px;
   height: 480px;
   background-image: url(./assets/img/bg-1.jpg);
@@ -51,223 +63,223 @@ button{
   overflow: hidden;
   animation: showBunner 3s ease;
 }
-.popup__open-wrapp{
-    position: absolute;
-    top: 50%;
-    right: 100px;
-    width: 30px;
-    height: 30px;
-    display: none;
-    justify-content: center;
-    align-items: center;
+.popup__open-wrapp {
+  position: absolute;
+  top: 50%;
+  right: 100px;
+  width: 30px;
+  height: 30px;
+  display: none;
+  justify-content: center;
+  align-items: center;
 }
-.popup__open{ 
-    background: #00b1f2;
-    border-radius: 50%;
-    padding: 5px;
-    width: 25px;
-    height: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    animation: showOpenPopup 1.2s ease;
+.popup__open {
+  background: #00b1f2;
+  border-radius: 50%;
+  padding: 5px;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: showOpenPopup 1.2s ease;
 }
-.open__media{
-    width: 12px;
-    height: 12px;
+.open__media {
+  width: 12px;
+  height: 12px;
 }
-@keyframes showOpenPopup{
-    0%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
+@keyframes showOpenPopup {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
-.banner__popup{
-    position: absolute;
-    top: 2%;
-    left: 1.7%;
-    z-index: 1000;
-    color: #000000;
-    background: #ffff;
-    width: 310px;
-    height: 460px;
-    padding: 20px;
-    display: none;
-    overflow: hidden;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+.banner__popup {
+  position: absolute;
+  top: 2%;
+  left: 1.7%;
+  z-index: 1000;
+  color: #000000;
+  background: #ffff;
+  width: 310px;
+  height: 460px;
+  padding: 20px;
+  display: none;
+  overflow: hidden;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
-.popup__close{
-    position: absolute;
-    top: 5px;
-    right: 5px;
-    background: none;
+.popup__close {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background: none;
 }
-.close__media{
-    width: 10px;
-    height: 10px;
+.close__media {
+  width: 10px;
+  height: 10px;
 }
-.popup__text{
-    font-size: 11px;
-    margin-bottom: 10px;
-    font-family: 'Roboto', sans-serif;
+.popup__text {
+  font-size: 11px;
+  margin-bottom: 10px;
+  font-family: "VWText";
 }
-.popup__video{
-    width: 275px;
-    height: 345px;
-    margin-bottom: 5px;
-    position: relative;
+.popup__video {
+  width: 275px;
+  height: 345px;
+  margin-bottom: 5px;
+  position: relative;
 }
-.video__btn{
-    position: absolute;
-    background: 0;
-    width: 30px;
-    height: 30px;
-    right: 7%;
-    bottom: 22%;
+.video__btn {
+  position: absolute;
+  background: 0;
+  width: 30px;
+  height: 30px;
+  right: 7%;
+  bottom: 22%;
 }
-.video__img{
-    width: 30px;
-    height: 30px;
+.video__img {
+  width: 30px;
+  height: 30px;
 }
-.popup__button{
-    width: 130px;
-    height: 70px;
-    border-radius: 25px;
-    background: #001e50;
-    color: #ffff;
-    font-size: 11px;
-    padding: 10px;
-
+.popup__button {
+  width: 130px;
+  height: 70px;
+  border-radius: 25px;
+  background: #001e50;
+  color: #ffff;
+  font-size: 11px;
+  padding: 10px;
 }
-.banner__logo{
-    margin-top: 25px;
+.banner__logo {
+  margin-top: 25px;
 }
-.logo__media{
-    width: 320px;
+.logo__media {
+  width: 320px;
 }
-.banner__content{
-    display: flex;
-    padding: 30px;
-    justify-content: space-between;
+.banner__content {
+  display: flex;
+  padding: 30px;
+  justify-content: space-between;
 }
-.banner__text{
-    position: relative;
+.banner__text {
+  position: relative;
 }
-.banner__text > strong{
-    animation: showText 1s ease;
-    font-family: 'Roboto', sans-serif;
+.banner__text > strong {
+  animation: showText 1s ease;
+  font-family: "VWHead";
 }
-.banner__text > span{
-    animation: showText 1s ease;
-    font-weight: lighter;
-    font-family: 'Roboto', sans-serif;
+.banner__text > span {
+  animation: showText 1s ease;
+  font-weight: lighter;
+  font-family: "VWHead";
 }
-@keyframes showText{
-    0%{
-        top: 100px;
-        opacity: 0;
-    }
-    100%{
-        top: 0;
-        opacity: 1;
-    }
+@keyframes showText {
+  0% {
+    top: 100px;
+    opacity: 0;
+  }
+  100% {
+    top: 0;
+    opacity: 1;
+  }
 }
-.banner__content-left{
-    display: flex;
-    flex-direction: column;
+.banner__content-left {
+  display: flex;
+  flex-direction: column;
 }
-.banner__content-right{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-    position: relative;
+.banner__content-right {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-end;
+  position: relative;
 }
-.banner__text{
-    font-size: 24px;
-    margin-bottom: 17px;
-    font-family: 'Roboto', sans-serif;
+.banner__text {
+  font-size: 24px;
+  margin-bottom: 17px;
+  font-family: "VWHead";
 }
-.banner__btn{
-    padding: 10px;
-    background: #ffffff;
-    font-size: 12px;
-    width: 150px;
-    border-radius: 20px;
+.banner__btn {
+  padding: 10px;
+  background: #ffffff;
+  font-size: 12px;
+  width: 150px;
+  border-radius: 20px;
+  font-family: "VWText";
 }
-.banner__micro{
-    background: #00b1f2;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+.banner__micro {
+  background: #00b1f2;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
 @keyframes bigBtn {
-    0%{
-        transform: scale(1);
-    }
-    50%{
-        transform: scale(1.2);
-    }
-    100%{
-        transform: scale(1);;
-    }
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
-.micro__media{
-    height: 50px;
-    width: 30px;
-    fill: #ffffff;
+.micro__media {
+  height: 50px;
+  width: 30px;
+  fill: #ffffff;
 }
-.banner__arrow{
-    background: #00b1f2;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 15px;
+.banner__arrow {
+  background: #00b1f2;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
 }
-.arrow__media{
-    width: 15px;
-    height: 20px;
+.arrow__media {
+  width: 15px;
+  height: 20px;
 }
-.bunner__bubble{
-    position: absolute;
+.bunner__bubble {
+  position: absolute;
+  bottom: 110px;
+  right: -20px;
+  width: 141px;
+  height: 67px;
+  background: url(./assets/img/bubble-2.png) no-repeat center;
+  animation: showBubble 2s ease;
+  transition: background-image 2s ease;
+}
+.bunner__bubble > p {
+  z-index: 10000;
+  color: #000000;
+  font-size: 9px;
+  margin-left: 20px;
+  margin-top: 5px;
+  font-family: "Roboto", sans-serif;
+}
+@keyframes showBubble {
+  0% {
+    opacity: 0;
+    bottom: 0px;
+  }
+  100% {
+    opacity: 1;
     bottom: 110px;
-    right: -20px;
-    width: 141px;
-    height: 67px;
-    background: url(./assets/img/bubble-2.png) no-repeat center;
-    animation: showBubble 2s ease;
-    transition: background-image 2s ease ;
+  }
 }
-.bunner__bubble>p{
-    z-index: 10000;
-    color: #000000;
-    font-size: 9px;
-    margin-left: 20px;
-    margin-top: 5px;
-    font-family: 'Roboto', sans-serif;
-}
-@keyframes showBubble{
-    0%{
-        opacity: 0;
-        bottom: 0px;
-    }
-    100%{
-        opacity: 1;
-        bottom: 110px;
-    }
-}
-.banner__subtext{
-    position: absolute;
-    font-size: 9px;
-    bottom: 5px;
-    left: 10px;
-    font-family: "Arial", sans-serif;
+.banner__subtext {
+  position: absolute;
+  font-size: 9px;
+  bottom: 5px;
+  left: 10px;
+  font-family: "Arial", sans-serif;
 }
