--- a/style.css
+++ b/style.css
@@ -220,6 +220,9 @@ button {
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 @keyframes bigBtn {
   0% {
@@ -233,8 +236,8 @@ button {
   }
 }
 .micro__media {
-  height: 50px;
-  width: 30px;
+  height: 70px;
+  width: 50px;
   fill: #ffffff;
 }
 .micro__media-action{
