--- a/style.css
+++ b/style.css
@@ -90,6 +90,22 @@ button {
 .open__media {
   width: 12px;
   height: 12px;
+  animation: pulsOpen 1.5s infinite ease;
+}
+@keyframes pulsOpen{
+  0% {
+    width: 12px;
+    height: 12px;
+  }
+  50% {
+    width: 18px;
+    height: 18px;
+  }
+  100% {
+    width: 10px;
+    height: 10px;
+  }
+  
 }
 @keyframes showOpenPopup {
   0% {
@@ -172,22 +188,24 @@ button {
   position: relative;
 }
 .banner__text > strong {
+  position: relative;
   animation: showText 1s ease;
   font-family: "VWHead";
   font-weight: bolder;
 }
 .banner__text > span {
+  position: relative;
   animation: showText 1s ease;
   font-weight: lighter;
   font-family: "VWHead";
 }
 @keyframes showText {
   0% {
-    top: 100px;
+    left: 10px;
     opacity: 0;
   }
   100% {
-    top: 0;
+    left: 0;
     opacity: 1;
   }
 }
@@ -216,23 +234,30 @@ button {
   font-family: "VWText";
 }
 .banner__micro {
-  background: #00b1f2;
+  background: #00b1f2fd;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 0 0 #00b1f2;
 }
-@keyframes bigBtn {
+.banner__micro-animate{
+  animation: shadowBtn 2s infinite ease;
+}
+@keyframes shadowBtn {
   0% {
-    transform: scale(1);
+    -moz-box-shadow: 0 0 0 0 rgba(44, 193, 204, 0.4);
+    box-shadow: 0 0 0 0 rgba(44, 193, 204, 0.4);
   }
-  50% {
-    transform: scale(1.2);
+  70% {
+      -moz-box-shadow: 0 0 0 15px rgba(44, 193, 204, 0);
+      box-shadow: 0 0 0 15px rgba(44, 193, 204, 0);
   }
   100% {
-    transform: scale(1);
+      -moz-box-shadow: 0 0 0 0 rgba(44, 193, 204, 0);
+      box-shadow: 0 0 0 0 rgba(44, 193, 204, 0);
   }
 }
 .micro__media {
@@ -267,6 +292,22 @@ height: 10px;
   animation: showBubble 2s ease;
   transition: background-image 2s ease;
 }
+.bunner__bubble-active{
+  position: absolute;
+  bottom: 110px;
+  right: -20px;
+  animation: showActiveBubble 1s ease;
+}
+
+@keyframes showActiveBubble{
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
 .bubble__media{
   width: 141px;
   height: 67px;
