--- a/style.css
+++ b/style.css
@@ -64,7 +64,20 @@ button {
   color: #ffffff;
   font-family: sans-serif;
   overflow: hidden;
-  animation: showBunner 3s ease;
+}
+.banner-animate{
+  animation: showBanner 1s ease;
+}
+
+@keyframes showBanner{
+  0%{
+    left: 100px;
+    opacity: 0;
+  }
+  100%{
+    left: 0px;
+    opacity: 1;
+  }
 }
 .popup__open-wrapp {
   position: absolute;
@@ -190,8 +203,6 @@ button {
 .banner__text > strong {
   position: relative;
   animation: showText 1s ease;
-  font-family: "VWHead";
-  font-weight: bolder;
 }
 .banner__text > span {
   position: relative;
@@ -260,10 +271,12 @@ button {
       box-shadow: 0 0 0 0 rgba(44, 193, 204, 0);
   }
 }
-.micro__media {
+.micro__media{
+  fill: #ffffff;
+}
+.micro__media-noaction {
   height: 70px;
   width: 50px;
-  fill: #ffffff;
 }
 .micro__media-action{
 width: 40px;
