--- a/style.css
+++ b/style.css
@@ -1,20 +1,3 @@
-@font-face {
-  font-family: VWText; 
-  src: url(./assets/fonts/VWText-Regular.otf); 
-}
-@font-face {
-  font-family: VWHead; 
-  src: url(./assets/fonts/VWHead-Bold.otf);
-}
-@font-face {
-  font-family: VWHead; 
-  src: url(./assets/fonts/VWHead-Regular.otf); 
-}
-@font-face {
-  font-family: VWHead; 
-  src: url(./assets/fonts/VWHead-Light.otf); 
-}
-
 /* Page */
 *,
 *::before,
@@ -178,13 +161,23 @@ button {
   height: 30px;
 }
 .popup__button {
-  width: 130px;
-  height: 70px;
+  width: 160px;
+  height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 25px;
   background: #001e50;
-  color: #ffff;
-  font-size: 11px;
-  padding: 10px;
+}
+.popup__button-media{
+  background: #ffffff;
+  border-radius: 20px;
+  width: 160px;
+  height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 130px;
 }
 .banner__logo {
   margin-top: 25px;
@@ -200,9 +193,13 @@ button {
 .banner__text {
   position: relative;
 }
-.banner__text > strong {
-  position: relative;
-  animation: showText 2.1s ease;
+.text__strong {
+  width: 155px;
+  height: 63px;
+}
+.text__span {
+  width: 160px;
+  height: 50px;
 }
 .banner__text > span {
   position: relative;
@@ -237,12 +234,16 @@ button {
   font-family: "VWHead";
 }
 .banner__btn {
-  padding: 10px;
   background: #ffffff;
-  font-size: 12px;
-  width: 150px;
   border-radius: 20px;
-  font-family: "VWText";
+  width: 160px;
+  height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn__media{
+  width: 130px;
 }
 .banner__micro {
   background: #00b1f2fd;
@@ -346,7 +347,7 @@ height: 10px;
 .banner__subtext {
   position: absolute;
   font-size: 9px;
-  bottom: 5px;
-  left: 30px;
+  bottom: 1px;
+  left: 17px;
   font-family: "Arial", sans-serif;
 }
