--- a/style.css
+++ b/style.css
@@ -48,6 +48,11 @@ button {
   font-family: sans-serif;
   overflow: hidden;
 }
+.banner::after{
+  position: absolute;
+  content: "";
+  background: #222222 url(audio.svg) center center no-repeat;
+}
 .banner-animate{
   animation: showBanner 1.3s ease;
 }
@@ -316,10 +321,8 @@ height: 10px;
     opacity: 1;
   }
 }
-
 .bubble__media{
-  width: 141px;
-  height: 67px;
+  width: 160px;
 }
 .bunner__bubble > p {
   z-index: 10000;
@@ -332,17 +335,15 @@ height: 10px;
 @keyframes showBubble {
   0% {
     opacity: 0;
-    bottom: 0px;
   }
   100% {
     opacity: 1;
-    bottom: 110px;
   }
 }
 .banner__subtext {
   position: absolute;
   font-size: 9px;
   bottom: 1px;
-  left: 17px;
+  left: 30px;
   font-family: "Arial", sans-serif;
 }
