--- a/style.css
+++ b/style.css
@@ -250,9 +250,7 @@ button {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
   box-shadow: 0 0 0 #00b1f2;
 }
 .banner__micro-animate{
@@ -274,9 +272,11 @@ button {
 }
 .micro__media{
   fill: #ffffff;
+  margin: auto;
+  height: 50px;
 }
 .micro__media-noaction {
-  height: 70px;
+  height: 50px;
   width: 50px;
 }
 .micro__media-action{
