--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@
   position: relative;
   height: 621px;
   width: 361px;
+  display: flex;
+  justify-content: center;
 }
 .phone__media{
   height: 621px;
@@ -33,6 +35,9 @@ body {
   align-items: center;
   background: #1a4f45;
 }
+img{
+  display: flex;  
+}
 .banner__wrapper{
   position: absolute;
   width: 320px;
@@ -47,6 +52,8 @@ body {
   width: 320px;
   height: 480px;
   background-image: url(./assets/img/bg-1.jpg);
+  background-repeat: no-repeat;
+    background-position: center;
   z-index: 99999;
   display: flex;
   flex-direction: column;
@@ -104,7 +111,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: showOpenPopup 2.1s ease;
+  animation: showOpenPopup 3.5s ease;
 }
 .open__media {
   width: 12px;
