--- a/style.css
+++ b/style.css
@@ -245,6 +245,18 @@ img{
     left: 20px;
     opacity: 0;
   }
+  25% {
+    left: 15px;
+    opacity: 0.25;
+  }
+  50% {
+    left: 10px;
+    opacity: 0.5;
+  }
+  75% {
+    left: 5px;
+    opacity: 0.75;
+  }
   100% {
     left: 0;
     opacity: 1;
