--- a/style.css
+++ b/style.css
@@ -242,33 +242,21 @@ img{
 }
 @keyframes showText {
   0% {
-    left: 20px;
+    transform: translateX(10px);
     opacity: 0;
   }
-  25% {
-    left: 15px;
-    opacity: 0.25;
-  }
-  50% {
-    left: 10px;
-    opacity: 0.5;
-  }
-  75% {
-    left: 5px;
-    opacity: 0.75;
-  }
   100% {
-    left: 0;
+    transform: translateX(0);
     opacity: 1;
   }
 }
 @keyframes hiddenText {
   0% {
-    left: 0;
+    transform: translateX(0);
     opacity: 1;
   }
   100% {
-    left: 10px;
+    transform: translateX(10px);
     opacity: 0;
   }
 }
