--- a/style.css
+++ b/style.css
@@ -277,6 +277,7 @@ img{
   width: 140px;
   height: 36px;
   display: flex;
+  text-align: center;
   justify-content: center;
   align-items: center;
   overflow: hidden;
