--- a/style.css
+++ b/style.css
@@ -417,11 +417,27 @@ body {
   background-size: contain;
   width: 70%;
   height: 30%;
-  bottom: 70px;
+  bottom: 80px;
   left: 21px;
   transition: 0.4s;
   transform: translateX(10px);
   opacity: 0;
+}
+
+.mikro__Slide2:before {
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  position: absolute;
+  content: "";
+  animation-name: mikro__Slide1;
+  animation-delay: 1s;
+  animation-duration: 2.25s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in;
+  background: #00b1f2;
+  opacity: 0.25;
 }
 
 .btn__Slide2 {
